--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <header>My super nice header</header>
     <main>My main content</main>
+    <footer>footer with som bling</footer>
 </body>
 </html>
